# courseraCForEveryone

./: CMakeLists.txt
Fundamentals/Week5/: bubbleSort.c
Structures/Week1/: preprocessor.c
Structures/Week2/: week2Assignment.c
