cmake_minimum_required(VERSION 3.17)
project(courseraCForEveryone C)

set(CMAKE_C_STANDARD 11)

add_executable(courseraCForEveryone main.c)
add_executable(week1add3 Fundamentals/Week1/add3.c)
add_executable(milesAndYardsToKM.c Fundamentals/Week1/milesAndYardsToKM.c)
add_executable(printPoem.c Fundamentals/Week1/printPoem.c)
add_executable(Week1fixDrP.c Fundamentals/Week1/Week1fixDrP.c)
add_executable(milesAndYardsToYards.c Fundamentals/Week1/milesAndYardsToYards.c)
add_executable(add3.c Fundamentals/Week1/add3.c)
add_executable(circlearea.c Fundamentals/Week1/circlearea.c)
add_executable(fahrenheitToCelsius.c Fundamentals/Week1/fahrenheitToCelsius.c)
add_executable(marathon.c Fundamentals/Week1/marathon.c)
add_executable(findSine.c Fundamentals/Week2/findSine.c)
add_executable(Week2fixDrP.c Fundamentals/Week2/Week2fixDrP.c)
add_executable(runningAverage.c Fundamentals/Week2/runningAverage.c)
add_executable(forCntChar.c Fundamentals/Week3/forCntChar.c)
add_executable(week3DrPFix.c Fundamentals/Week3/week3DrPFix.c)
add_executable(ternaryOperator.c Fundamentals/Week3/ternaryOperator.c)
add_executable(sineCosine.c Fundamentals/Week3/sineCosine.c)
add_executable(whleCntChar.c Fundamentals/Week3/whleCntChar.c)
add_executable(simpleForLoop.c Fundamentals/Week3/simpleForLoop.c)
add_executable(weather.c Fundamentals/Week3/weather.c)
add_executable(speedingTicket.c Fundamentals/Week3/speedingTicket.c)
add_executable(whileLoop.c Fundamentals/Week3/whileLoop.c)
add_executable(breakContinueAndSwitch.c Fundamentals/Week3/breakContinueAndSwitch.c)
add_executable(valentinesWhile.c Fundamentals/Week3/valentinesWhile.c)
add_executable(recursionFactorial.c Fundamentals/Week4/recursionFactorial.c)
add_executable(FunctionPrototype.c Fundamentals/Week4/FunctionPrototype.c)
add_executable(recursiveFibonacci.c Fundamentals/Week4/recursiveFibonacci.c)
add_executable(moreMergeSort.c Fundamentals/Week5/moreMergeSort.c)
add_executable(arrayAsParameter.c Fundamentals/Week5/arrayAsParameter.c)
add_executable(simpleArray.c Fundamentals/Week5/simpleArray.c)
add_executable(weighElephantSeal.c Fundamentals/Week5/weighElephantSeal.c)
add_executable(example.c Fundamentals/Week5/example.c)
add_executable(pointerCode.c Fundamentals/Week5/pointerCode.c)
add_executable(bubbleSort.c Fundamentals/Week5/bubbleSort.c)
add_executable(mergeSort.c Fundamentals/Week5/mergeSort.c)
add_executable(preprocessor.c Structures/Week1/preprocessor.c)
add_executable(enums.c Structures/Week1/enums.c)
add_executable(asserts.c Structures/Week1/asserts.c)
add_executable(assertsMath.c Structures/Week1/assertsMath.c)
add_executable(week2Assignment.c Structures/Week2/week2Assignment.c)